[package]
name = "so-ref"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
rmcp = { version = "1.1.0", features = ["server", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
